@@ -127,9 +127,9 @@
   </connection>
   <connection>
    <sender>m_tabs</sender>
-   <signal>selected(QString)</signal>
+   <signal>currentChanged(int)</signal>
    <receiver>BackgroundWinBase</receiver>
-   <slot>selectedPageEvent(QString)</slot>
+   <slot>selectedPageEvent(int)</slot>
    <hints>
     <hint type="sourcelabel">
      <x>20</x>
